<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/popUpRootElement" android:background="@drawable/popup_background" android:padding="30.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/brown" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pause_selection_title_1" />
    <TextView android:textColor="@color/brown" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/pause_selection_title_2" />
    <Button android:id="@id/shortBreak" android:layout_width="160.0dip" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="@string/pause_selection_short_break_option" style="@style/CustomButton.Green" />
    <Button android:id="@id/longBreak" android:layout_width="160.0dip" android:layout_height="wrap_content" android:text="@string/pause_selection_long_break_option" style="@style/CustomButton.Green" />
</LinearLayout>