<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="38.0dip" android:src="@drawable/pomodoro_add_task_logo" />
    <LinearLayout android:orientation="vertical" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/task_name" />
        <EditText android:id="@id/taskNameEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:ems="10" android:inputType="textCapSentences">
            <requestFocus />
        </EditText>
        <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expected_pomodoros" />
            <TextView android:textSize="23.0dip" android:textStyle="bold" android:textColor="@*android:color/white" android:id="@id/expectedPomodorosNumberTextView" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <SeekBar android:id="@id/expectedPodomorosSeekBar" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="16.0dip" android:max="7" android:progress="3" android:progressDrawable="@drawable/seek_bar_progress" android:minHeight="16.0dip" android:thumb="@drawable/seek_thumb_normal" />
        <Button android:layout_gravity="center_horizontal" android:id="@id/saveBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="150.0dip" android:text="@string/save_btn" style="@style/CustomButton.Green" />
    </LinearLayout>
</LinearLayout>